--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3b3d42', end
 #anouncements .list-group-item h6 {
 	color: #2c3c71;	
 }
-
+#facts .list-group-item{
+	background: transparent;
+	padding: 5px;
+}
 .card {
 	border-radius: 0px !important;
 	border-color: transparent;
